--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
         <h1 class="header-title">My Interests</h1>
       </div>
     </header>
+    <h2>Additional message</h2>
+    <p class="message">Hello This Is a Change</p>
   </body>
 </html>
